src/main/default/objects/aforza__Invoice_Line_Item__c/aforza__Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>A specific charge or listing on a customer&apos;s invoice.</description>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILI-{00000000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>