src/main/default/objects/aforza__Invoice_Line_Item__c/fields/aforza__Category__c.field-meta.xml
<CustomField>
    <fullName>aforza__Category__c</fullName>
    <description>The category of asset being invoiced.</description>
    <inlineHelpText>The category of asset being invoiced.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>PromotionProduct</fullName>
                <label>Promotion Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>