src/main/default/objects/aforza__Invoice_Line_Item__c/fields/aforza__Invoice__c.field-meta.xml
<CustomField>
    <fullName>aforza__Invoice__c</fullName>
    <description>The invoice the line item is for.</description>
    <inlineHelpText>The invoice the line item is for.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>aforza__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Billing_Statement_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>