src/main/default/objects/aforza__Invoice_Line_Item__c/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>