src/main/default/objects/aforza__Invoice_Line_Item__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>