src/main/default/objects/aforza__Invoice_Line_Item__c/fields/SequenceNo__c.field-meta.xml
<CustomField>
    <fullName>SequenceNo__c</fullName>
    <displayFormat>SEQ-{00000000}</displayFormat>
    <label>Sequence No</label>
    <type>AutoNumber</type>
</CustomField>