src/main/default/objects/aforza__Invoice_Line_Item__c/fields/SkuCode__c.field-meta.xml
<CustomField>
    <fullName>SkuCode__c</fullName>
    <label>SKU Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>