src/main/default/objects/aforza__Invoice_Line_Item__c/fields/SkuName__c.field-meta.xml
<CustomField>
    <fullName>SkuName__c</fullName>
    <label>SKU Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>