src/main/default/objects/aforza__Invoice_Line_Item__c/fields/VatRate__c.field-meta.xml
<CustomField>
    <fullName>VatRate__c</fullName>
    <label>VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>